# cross-sdk-tests

./: .gitignore  README.md  README_EXECUTION.md  README_HOW_TO_RUN.md  WRAPPER_API_SPEC.md  WRAPPER_REPOS.md  docker-compose.holdouts-local.yml  docker-compose.matrix.yml  docker-compose.unit-tests.yml  docker-compose.yml  e2e-config.env.example  generate_scenarios.py  run-all-individual.sh  run-all-tests.sh  run-e2e-tests.sh  run-individual-tests.sh  run-tests.sh  setup-sdks.sh  test_kotlin_local.py  test_scenarios_complete.json  verify_sdk.sh
angular-wrapper/: Dockerfile  package.json  server.js
cpp-wrapper/: CMakeLists.txt  Dockerfile  server.cpp
dart-wrapper/: Dockerfile  pubspec.yaml  server.dart
dotnet-wrapper/: Dockerfile  Program.cs  dotnet-wrapper.csproj
elixir-wrapper/: Dockerfile
flutter-wrapper/: Dockerfile  pubspec.yaml  server.dart
go-wrapper/: Dockerfile  go.mod  go.sum  server.go
java-wrapper/: Dockerfile  README.md  build.gradle  pom.xml
javascript-wrapper/: Dockerfile  package.json  server.js
kotlin-wrapper/: Dockerfile  build.gradle.kts  settings.gradle.kts
liquid-wrapper/: Dockerfile  Gemfile  server.rb
orchestrator/: Dockerfile  e2e_runner.py  results_aggregator.py  test_runner.py
php-wrapper/: Dockerfile  composer.json  debug.php  router.php  server.php
python-wrapper/: Dockerfile  server.py
react-wrapper/: Dockerfile  package.json  server.js
ruby-wrapper/: Dockerfile  Gemfile  server.rb
rust-wrapper/: Cargo.toml  Dockerfile
rust-wrapper/src/: main.rs
scala-wrapper/: Dockerfile  build.sbt
vue2-wrapper/: Dockerfile  (+2 more)
(+43 files in other folders)
