[package]
name = "rust-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
absmartly-sdk = { path = "../../rust-sdk" }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
